maven-debian-helper (1.6.6) UNRELEASED; urgency=low

  * Added com.github.github:site-maven-plugin to the ignored plugins
  * Added org.codehaus.mojo:ianal-maven-plugin to the ignored plugins
  * Added com.mycila.maven-license-plugin:maven-license-plugin
    to the ignored plugins
  * Added wagon-gitsite to the ignored extensions
  * Depend on maven-repo-helper >= 1.8.5
  * Improved the detection of the documentation packages
  * Fixed an IllegalArgumentException when a documentation package is not found
    (Closes: #712506)
  * Added a header to orig-tar.svn.vm

  [ Steffen Moeller ]
  * Removed the trailing white space after the Homepage field
    in the generated control file
  * Fixed the length of the separator underlining the title
    in the generated README.source

 -- Emmanuel Bourg <ebourg@apache.org>  Fri, 23 Aug 2013 22:46:59 +0200

maven-debian-helper (1.6.5) unstable; urgency=low

  * Add Wolodja Wentland to uploaders
  * Prevent artifact installation during dh build (switch maven target from
    "install" to "package")
  * Adjust mh_resolve_dependencies arguments in dh to match CDBS
  * Adjust debian-maven-plugin options in dh to match CDBS
  * Switch maven doc target back to javadoc:jar (was javadoc:javadoc)

 -- Wolodja Wentland <debian@babilen5.org>  Sat, 17 Aug 2013 15:24:16 +0000

maven-debian-helper (1.6.4) unstable; urgency=low

  [ Emmanuel Bourg ]
  * Don't install the documentation jar by default (Closes: #711852)
  * Generate canonical URLs for the Vcs-* fields
  * Refer to "Debian systems" instead of "Debian GNU/Linux system"
    in the generated copyright file
  * Fixed the information message displayed when resolving dependencies
    (regression in version 1.6)
  * Added l10n-maven-plugin to the list of the documentation plugins
  * Added maven-svn-wagon to the list of the ignored extensions
  * Added maven-scm-publish-plugin to the list of the ignored plugins
  * Added rat-maven-plugin to the list of the ignored plugins